flaskapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: flaskapp
  name: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flaskapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/todo-app-csgy-9223-default: "true"
        io.kompose.service: flaskapp
    spec:
      containers:
        - env:
            - name: FLASK_ENV
              value: development
            - name: MONGO_HOST
              value: mongo
            - name: MONGO_PORT
              value: "27017"
            - name: PORT
              value: "5000"
          image: kevsq/flaskapp:latest
          name: flaskapp
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
