todo-app-csgy-9223-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: todo-app-csgy-9223-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/todo-app-csgy-9223-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/todo-app-csgy-9223-default: "true"
